# MPi-mip

./: .gitignore  PIPELINE_DESIGN.md  README.md  dashboard.html  package-lock.json  probe_rbi_playwright.py  pyproject.toml  run_pipeline.py
config/: settings.toml
experiment/neuralprophet/: README.md  data_loader.py  main.py  pyproject.toml  run_experiment.py
experiments/axiom_audit/: AUDIT_REPORT.md  AUDIT_ROUND2.md  AUDIT_ROUND4.md  README.md  fix_f01_ets_ci.py  fix_f02_ets_cv.py  fix_f04_dc_vol_changepoints.py  fix_f05_residual_model.py  fix_f06_dynamic_caps.py  fix_f07_regressor_clip.py  fix_f08_f09_accuracy_flags.py  fix_f10_oos_holdout.py  fix_f11_step_dummies.py  fix_p01_pipeline.yml  (+5 more)
logs/: upi_analysis_report.md
notebooks/: eda.py
reports/: MIP_Phase2_Final_Report.docx  MIP_Phase2_Final_Report_Updated.docx  MIP_Phase2_PRD.docx  MIP_Presentation.pptx  bank_forecast_accuracy.docx  bank_forecast_accuracy.md  bank_forecast_accuracy_final.docx  bank_forecast_accuracy_v2.docx  bank_forecast_accuracy_v3.docx  eda_data.json  generate_project_report.js  ~$nkwise_eda_report.docx
scripts/: bank_oos.py  bankwise_eda_granger.py  bankwise_eda_report.py  bankwise_per_bank_eda.py  build_eda_docx.js  compute_eda_data.py  concentration.py  enhancement_analysis.py  extract_oos.py  gen_accuracy_docx.py  generate_eda_charts.py  inspect_bankwise_cols.py  method_comparison.py  method_comparison_fair.py  model_comparison.py  rebuild_dashboard.py  sync_to_supabase.py
src/: __init__.py  config.py
web/: .gitignore  package-lock.json  package.json  tailwind.config.ts
(+81 files in other folders)
