[project]
name = "mpi-mip"
version = "0.1.0"
description = "MPi Market Intelligence Platform — cards outstanding forecasting"
requires-python = ">=3.12,<3.14"
dependencies = [
    "loguru>=0.7",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "playwright>=1.48",
    "plotly>=5.24",
    "prophet>=1.1",
    "pyarrow>=17.0",
    "pydantic>=2.9",
    "statsmodels>=0.14.6",
    "supabase>=2.10",
    "xlrd>=2.0",
]
# Removed (Jun 2026 cleanup):
#   neuralprophet>=0.9.0  -- on hold, dep conflicts, not used in src/
#   ruptures>=1.1         -- never imported in src/
#   scikit-learn>=1.5     -- never imported in src/ (prophet bundles its own)

# Forecasting and dashboard dependencies will be added when Tasks 2 / 5 begin:
#   prophet, plotly, jinja2, ruptures, scikit-learn

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "ruff>=0.7",
]

[tool.uv.workspace]
exclude = ["experiment/neuralprophet"]
